Fix z-index for header

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
 }
 
 .circle-sm {
-  z-index: 99;
+  z-index: 5;
 }
 
 .circle-lg {
